--- a/app/views/layouts/_javascript.html.erb
+++ b/app/views/layouts/_javascript.html.erb
@@ -1,4 +1,5 @@
 <%= javascript_include_tag :defaults %>
+<%= javascript_include_tag 'jquery' %>
 <%= javascript_include_tag 'facebook' %>
 <%= javascript_include_tag 'opentok_sdk' %>
 <%= render 'layouts/googleanalytics' %>
